--- a/templates/posters.html
+++ b/templates/posters.html
@@ -78,7 +78,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
                         {% endif %}
 
                     {% endif %}
-                <div id="{{ poster.room }}-{{ poster.cluster }}" style="position: relative;top: -80px;"></div>
+{#                <div id="{{ poster.room }}-{{ poster.cluster }}" style="position: relative;top: -80px;"></div>#}
+                <div id="{{ poster.room }}-{{ poster.cluster }}"></div>
 
                     <div class="col-12 mb-4">
                         <strong>Cluster {{ poster.cluster }}: {{poster.cluster_name}}</strong>
