--- a/templates/undergraduate_consortium.html
+++ b/templates/undergraduate_consortium.html
@@ -36,7 +36,7 @@
     <a href="https://aaai-uc.github.io/2021.html" target="_blank"  class="card-link">
         External Site
     </a>
-    <a href="https://123.com" target="_blank"  class="card-link">
+    <a href="https://zoom.us/j/97351385119?pwd=QitYWVo1WWFEbXlSR0ZZRTdvNDNHdz09" target="_blank"  class="card-link">
         Join Zoom Meeting
     </a>
     </div>
