update ai in practice time

--- a/templates/ai_in_practice.html
+++ b/templates/ai_in_practice.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="m-3 text-muted">
-                February 4, 11:00 AM - 12:00 PM PST
+                February 4, 10:30 AM - 11:30 AM PST
             </div>
 
 
@@ -140,7 +140,7 @@
             </div>
 
             <div class="m-3 text-muted">
-                February 5, 11:00 AM - 12:00 PM PST
+                February 5, 10:30 AM - 11:30 AM PST
             </div>
 
 
@@ -239,7 +239,7 @@
             </div>
 
             <div class="m-3 text-muted">
-                February 6, 11:00 AM - 12:00 PM PST
+                February 6, 10:30 AM - 11:30 AM PST
             </div>
 
             <div class="m-3">
