community tabs info update

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -7,8 +7,8 @@
 {% block content %}
 
 
-<div class="row">
-  <div class="col-md-12 col-sm-12 pr-5 lead">
+<div class="pp-card m-3" style="">
+  <div class="card-header">
     <p>Welcome to the AAAI Awards Ceremony!</p>
 
     <p>AAAI organizational awards are presented each year at the AAAI Conference on Artificial Intelligence. They comprise a host of lifetime honors and individual awards for significant achievements by AAAI members. Several committees review nominations for the various categories of awards, including the AAAI Fellows Committee, the AAAI Awards Committee, the IAAI/AI Magazine Engelmore Awards Committee, the AAAI/EAAI Outstanding Educator Award Committee, and a joint committee for the AAAI/ACM-SIGAI Dissertation Award.</p>
@@ -22,7 +22,8 @@
     
     <p>Yolanda Gil<br>
     Chair, Fellows and Awards Committees</p>
-
+    </div>
+  </div>
     <h2 style="margin-bottom:20px"> Awards </h2>
     
     {% for award in awards %}
