--- a/templates/diversity_programs.html
+++ b/templates/diversity_programs.html
@@ -5,8 +5,8 @@
 {% block heading %}
 
 {{ components.section("Diversity Programs") }}
-<div class="row">
-    <div class="col-md-12 col-sm-12 pr-5 lead">
+<div class="pp-card m-3" style="">
+  <div class="card-header">
       <p>Welcome to the AAAI-21 Diversity and Inclusion Program!</p>
   
   <p>Participation in AI by groups that are underrepresented in computer science is a fraction of what is needed to have an AI workforce that reflects the diversity in society. Diversity has many facets, including race, ethnicity, gender, age, religion, disability, sexual orientation, socioeconomic status, and cultural background. AAAI-21 will include several programs specifically designed to address this challenging issue.</p>
