--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -15,11 +15,18 @@
   <!-- <div class="col-md-12 col-sm-12 pr-5 lead"> -->
     <p>Welcome to the Meet with a AAAI Fellow Program</p>
     <p>First held in 2006, the AAAI Fellow/Student program provides an opportunity for a small number of students to chat with a AAAI Fellow in an informal setting during the conference. This year the program will be held via Gather.town. Sign-up sheets will be available in the room, and a volunteer will assist you in locating your chosen Fellow at the designated time.</p>
-    <p>Fellows will generally be available for one hour in one of the following time periods. A full schedule is included below.</p>
+    <p>Fellows will generally be available for one hour in one of the following time periods from Feburary 4th to Feburary 6th. </p>
+    <p>
+      12:00 - 14:00 PST <br />
+      20:00 - 22:00 PST <br />
+      04:00 - 06:00 PST
+    </p>
+    <p>A full schedule is included below.</p>
+
   </div>
 </div>
     <h2 class="card-title main-title text-center">
-      Schedule
+      AAAI-21 Meet with a Fellow Program Schedule
     </h2>
     <div>
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
@@ -34,27 +41,27 @@
             </thead>
             <tbody>
               <tr>
-                <td scope="row">Feburary 4th, 12:00 - 13:00 PST</td>
+                <td scope="row">Feburary 4th, 12:00 PM - 01:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Maria Gini, Rao Kambhampati</td>
               </tr>
               <tr>
-                <td scope="row">Feburary 4th, 13:00 - 14:00 PST</td>
+                <td scope="row">Feburary 4th, 01:00 PM - 02:00 PM PST</td>
                 <td style="white-space: pre-wrap;"> Maria Gini, Jorg Hoffmann, Holly Yanco</td>
               </tr>
               <tr>
-                <td scope="row">Feburary 5th, 12:00 - 13:00 PST</td>
+                <td scope="row">Feburary 5th, 12:00 PM - 01:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Eugene Freuder, Mark Maybury, Marie desJardins</td>
               </tr>
               <tr>
-                <td scope="row">Feburary 5th, 13:00 - 14:00 PST</td>
+                <td scope="row">Feburary 5th, 01:00 PM - 02:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Alan Mackworth</td>
               </tr>
               <tr>
-                <td scope="row">Feburary 6th, 12:00 - 13:00 PST</td>
+                <td scope="row">Feburary 6th, 12:00 PM - 01:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Bing Liu, Murray Campbell</td>
               </tr>
               <tr>
-                <td scope="row">Feburary 6th, 20:00 - 21:00 PST</td>
+                <td scope="row">Feburary 6th, 08:00 PM - 09:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Maja Mataric</td>
               </tr>
               
