Add New Faculty Highlights Program

--- a/templates/base.html
+++ b/templates/base.html
@@ -207,6 +207,9 @@
                     <a class="dropdown-item" href="invited_panels_program.html">
                       Invited Panels Program
                     </a>
+                    <a class="dropdown-item" href="new_faculty_highlights_program.html">
+                      New Faculty Highlights Program
+                    </a>
                   </div>
                 </li>
               {% elif id == "Community" %}
