--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -14,8 +14,9 @@
 <!-- <div class="row"> -->
   <!-- <div class="col-md-12 col-sm-12 pr-5 lead"> -->
     <p>Welcome to the Meet with a AAAI Fellow Program</p>
+    <p>Thursday - Saturday, February 4 - 6</p>
     <p>First held in 2006, the AAAI Fellow/Student program provides an opportunity for a small number of students to chat with a AAAI Fellow in an informal setting during the conference. This year the program will be held via Gather.town. Sign-up sheets will be available in the room, and a volunteer will assist you in locating your chosen Fellow at the designated time.</p>
-    <p>Fellows will generally be available for one hour in one of the following time periods. </p>
+    <p>Fellows will generally be available for one hour in one of the following time periods. A full schedule is included below.</p>
     <p>
       Feburary 4 - 6 <br />
       ------------------<br/>
@@ -23,7 +24,6 @@
       20:00 - 22:00 PST <br />
       04:00 - 06:00 PST (Feburary 5-7)
     </p>
-    <p>A full schedule is included below.</p>
 
   </div>
 </div>
