meet with a fellow time format update

--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -20,9 +20,9 @@
     <p>
       Feburary 4 - 6 <br />
       ------------------<br/>
-      12:00 - 14:00 PST <br />
-      20:00 - 22:00 PST <br />
-      04:00 - 06:00 PST (Feburary 5-7)
+      12:00 PM - 2:00 PM PST<br />
+      8:00 PM - 10:00 PM PST <br />
+      4:00 AM - 6:00 AM PST  (Feburary 5-7)
     </p>
 
   </div>
