--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -21,8 +21,11 @@
     <a href="http://eaai.cs.mtu.edu/" target="_blank"  class="card-link">
         External Site
     </a>
-    <a href="https://123.com" target="_blank"  class="card-link">
-        Join Zoom Meeting
+    <a href="https://zoom.us/j/95130246880?pwd=OFl3M2NaWktqM2I1TStBdmQ4OW9kdz09" target="_blank"  class="card-link">
+        Join Zoom Meeting day 1
+    </a>
+        <a href="https://zoom.us/j/99272237550?pwd=Q1lrTC9QYitTNStaWUF0SWh2RnZVUT09" target="_blank"  class="card-link">
+        Join Zoom Meeting day 2
     </a>
     </div>
 <div class="row">
