--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 
         <dt>Poster Sessions</dt>
         <dd>
-            Conference-wide poster sessions will be held February 4-7, and will include posters from all programs listed below under Conference Papers (except EAAI-21). Poster sessions are scheduled for the following times:
+            Conference-wide <a class="text" href="posters.html">poster sessions</a> will be held February 4-7, and will include posters from all programs listed below under Conference Papers (except EAAI-21). Poster sessions are scheduled for the following times:
             <li>
                 8:45 - 10:30 AM PST
             </li>
@@ -135,7 +135,7 @@
 
        <dt>Conference Papers</dt>
         <dd>
-            Preliminary PDFs for all accepted <a class="text" href="papers.html">papers</a> for the following tracks are available via this site: AAAI Main Track, AAAI Special Track on AI for Social Impact, IAAI-21, EAAI-21, Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, and the Undergraduate Consortium.
+            Preliminary PDFs for all accepted <a class="text" href="papers.html">papers</a> for the following tracks are available via this site: AAAI Main Track, AAAI Special Track on AI for Social Impact, <a class="text" href="iaai.html">IAAI-21</a>, <a class="text" href="eaai.html">EAAI-21</a>, Senior Member Talks, <a class="text" href="demonstrations.html">Demonstrations</a>, <a class="text" href="student_abstract_program.html">Student Abstract Program</a>, <a class="text" href="doctoral_consortium.html">Doctoral Consortium</a>, and the <a class="text" href="undergraduate_consortium.html">Undergraduate Consortium</a>.
         </dd>
 
         <dt>AAAI-21/IAAI-21 Conference Pre-recorded Talks</dt>
@@ -151,6 +151,11 @@
             <li>
                 Pre-recorded talks for the following programs are also available: Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, the Classic Paper Award Talk, and the AAAI/ACM SIGAI Dissertation Award Talk. Live Q&A video sessions (Zoom/Virtual Chair on Gather.Town) will be available via the assigned poster session times, as well as a linked RocketChat channel (for chatting anytime with the author).
             </li>
+        </dd>
+
+        <dt>AAAI-21 New Faculty Highlights Program</dt>
+        <dd>
+            <a class="text" href="new_faculty_highlights_program.html">New Faculty Highlight</a> invited speakers have submitted prerecorded videos for viewing throughout the conference.
         </dd>
 
         <dt>EAAI-21 Symposium</dt>
@@ -242,7 +247,7 @@
 
     </div>
 
-     <div class="col-md-12 col-xs-12 my-auto p-3" >
+     <div class="col-md-12 col-xs-12 my-auto p-2" >
         <div class="text-muted">
       Intro by Program Chairs
       </div>
@@ -265,7 +270,7 @@
     </div>
 
 
-          <div class="col-md-12 col-xs-12 my-auto p-3" >
+          <div class="col-md-12 col-xs-12 my-auto p-2" >
         <div class="text-muted">
       Intro by Associate Conference Chairs for Virtual Operations
       </div>
