--- a/templates/undergraduate_consortium.html
+++ b/templates/undergraduate_consortium.html
@@ -18,7 +18,7 @@
     <li>providing advice, tools, and resources for successfully applying to and attending graduate school in an AI-related research.</li>
     </ul>
     <p>
-    The fourteen students accepted to participate in this program will also participate in the AAAI-21 Poster Sessions on Thursday, February 4. All interested AAAI-21 undergraduate student registrants are invited to observe the presentations.
+    The fourteen students accepted to participate in this program will also participate in the <a href="posters.html" target="_blank">AAAI-21 Poster Sessions</a> on Thursday, February 4. All interested AAAI-21 undergraduate student registrants are invited to observe the presentations.
     </p>
     <p>
     The full Undergraduate Consortium schedule is included below.
