--- a/templates/components.html
+++ b/templates/components.html
@@ -1080,7 +1080,21 @@
   </div>
   </div>
   <div class="text-center text-muted text-monospace">
+  {% if paper.content.room[0] == 'A' and (paper.content.room[1] == 'B' or paper.content.room[1] == 'C') %}
   <div class="paper-cal-links">
+  <span class="session_times">Room {{ paper.content.room_letter2 }} in Virtual Chair on Gather.Town, {{paper.content.date2}} {{paper.content.time2}} PST</span>
+  <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">
+  <span id="session-cal-link-2"></span>
+  </div>
+  </div>
+    <div class="text-center text-muted text-monospace">
+  <div class="paper-cal-links">
+  <span class="session_times">Room {{ paper.content.room_letter1 }} in Virtual Chair on Gather.Town, {{paper.content.date1}} {{paper.content.time1}} PST</span>
+  <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">
+  <span id="session-cal-link-1"></span>
+  </div>
+  {% else %}
+    <div class="paper-cal-links">
   <span class="session_times">Room {{ paper.content.room_letter1 }} in Virtual Chair on Gather.Town, {{paper.content.date1}} {{paper.content.time1}} PST</span>
   <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">
   <span id="session-cal-link-1"></span>
@@ -1092,6 +1106,7 @@
   <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">
   <span id="session-cal-link-2"></span>
   </div>
+ {% endif %}
   </div>
       {% if paper.content.date3 != "unknown" %}
     <div class="text-center text-muted text-monospace">
