update poster info title

--- a/templates/posters.html
+++ b/templates/posters.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% set page_title = "Q&A Sessions" %}
+{% set page_title = "Poster Sessions" %}
 
 {% block heading %}
 {{ components.section("Poster Sessions") }}
