change jiahao to douhao

--- a/templates/posters.html
+++ b/templates/posters.html
@@ -35,12 +35,12 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
           <a href="posters_feb4.html#AB-D1-R1">AB-D1-R1</a> +
           <a href="posters_feb4.html#AB-D1-R2">AB-D1-R2</a> +
           <a href="posters_feb4.html#BC-D1-R1">BC-D1-R1</a> +
-          <a href="posters_feb4.html#BC-D1-R2">BC-D1-R2</a> +
-          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> +
-          <a href="posters_feb4.html#UC-D1">UC-D1</a> +
-          <a href="posters_feb4.html#SA-D1">SA-D1</a> +
-          <a href="posters_feb4.html#DC-D1">DC-D1</a> +
-          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> +
+          <a href="posters_feb4.html#BC-D1-R2">BC-D1-R2</a> ,
+          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> ,
+          <a href="posters_feb4.html#UC-D1">UC-D1</a> ,
+          <a href="posters_feb4.html#SA-D1">SA-D1</a> ,
+          <a href="posters_feb4.html#DC-D1">DC-D1</a> ,
+          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> ,
           <a href="posters_feb4.html#Award-D1">Award-D1</a>
       </td>
     </tr>
@@ -50,12 +50,12 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb4.html#AC-D1-R1">AC-D1-R1</a> +
           <a href="posters_feb4.html#AC-D1-R2">AC-D1-R2</a> +
           <a href="posters_feb4.html#BC-D1-R1">BC-D1-R1</a> +
-          <a href="posters_feb4.html#BC-D1-R2">BC-D1-R2</a> +
-          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> +
-          <a href="posters_feb4.html#UC-D1">UC-D1</a> +
-          <a href="posters_feb4.html#SA-D1">SA-D1</a> +
-          <a href="posters_feb4.html#DC-D1">DC-D1</a> +
-          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> +
+          <a href="posters_feb4.html#BC-D1-R2">BC-D1-R2</a> ,
+          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> ,
+          <a href="posters_feb4.html#UC-D1">UC-D1</a> ,
+          <a href="posters_feb4.html#SA-D1">SA-D1</a> ,
+          <a href="posters_feb4.html#DC-D1">DC-D1</a> ,
+          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> ,
           <a href="posters_feb4.html#Award-D1">Award-D1</a>
       </td>
     </tr>
@@ -65,12 +65,12 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb4.html#AB-D1-R1">AB-D1-R1</a> +
           <a href="posters_feb4.html#AB-D1-R2">AB-D1-R2</a> +
           <a href="posters_feb4.html#AC-D1-R1">AC-D1-R1</a> +
-          <a href="posters_feb4.html#AC-D1-R2">AC-D1-R2</a> +
-          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> +
-          <a href="posters_feb4.html#UC-D1">UC-D1</a> +
-          <a href="posters_feb4.html#SA-D1">SA-D1</a> +
-          <a href="posters_feb4.html#DC-D1">DC-D1</a> +
-          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> +
+          <a href="posters_feb4.html#AC-D1-R2">AC-D1-R2</a> ,
+          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> ,
+          <a href="posters_feb4.html#UC-D1">UC-D1</a> ,
+          <a href="posters_feb4.html#SA-D1">SA-D1</a> ,
+          <a href="posters_feb4.html#DC-D1">DC-D1</a> ,
+          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> ,
           <a href="posters_feb4.html#Award-D1">Award-D1</a>
       </td>
     </tr>
@@ -80,10 +80,10 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb5.html#AB-D2-R1">AB-D2-R1</a> +
           <a href="posters_feb5.html#AB-D2-R2">AB-D2-R2</a> +
           <a href="posters_feb5.html#BC-D2-R1">BC-D2-R1</a> +
-          <a href="posters_feb5.html#BC-D2-R2">BC-D2-R2</a> +
-          <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> +
-          <a href="posters_feb5.html#SA-D2">SA-D2</a> +
-          <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> +
+          <a href="posters_feb5.html#BC-D2-R2">BC-D2-R2</a> ,
+          <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> ,
+          <a href="posters_feb5.html#SA-D2">SA-D2</a> ,
+          <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> ,
           <a href="posters_feb5.html#Award-D2">Award-D2</a>
 
       </td>
@@ -94,10 +94,10 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb5.html#AB-D2-R1">AB-D2-R1</a> +
           <a href="posters_feb5.html#AB-D2-R2">AB-D2-R2</a> +
           <a href="posters_feb5.html#AC-D2-R1">AC-D2-R1</a> +
-          <a href="posters_feb5.html#AC-D2-R2">AC-D2-R2</a> +
-          <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> +
-          <a href="posters_feb5.html#SA-D2">SA-D2</a> +
-          <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> +
+          <a href="posters_feb5.html#AC-D2-R2">AC-D2-R2</a> ,
+          <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> ,
+          <a href="posters_feb5.html#SA-D2">SA-D2</a> ,
+          <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> ,
           <a href="posters_feb5.html#Award-D2">Award-D2</a>
       </td>
     </tr>
@@ -107,10 +107,10 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb5.html#AB-D2-R1">AB-D2-R1</a> +
           <a href="posters_feb5.html#AB-D2-R2">AB-D2-R2</a> +
           <a href="posters_feb5.html#BC-D2-R1">BC-D2-R1</a> +
-          <a href="posters_feb5.html#BC-D2-R2">BC-D2-R2</a> +
-          <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> +
-          <a href="posters_feb5.html#SA-D2">SA-D2</a> +
-          <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> +
+          <a href="posters_feb5.html#BC-D2-R2">BC-D2-R2</a> ,
+          <a href="posters_feb5.html#IAAI-D2">IAAI-D2</a> ,
+          <a href="posters_feb5.html#SA-D2">SA-D2</a> ,
+          <a href="posters_feb5.html#DEMO-D2">DEMO-D2</a> ,
           <a href="posters_feb5.html#Award-D2">Award-D2</a>
       </td>
     </tr>
@@ -120,9 +120,9 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb6.html#AB-D3-R1">AB-D3-R1</a> +
           <a href="posters_feb6.html#AB-D3-R2">AB-D3-R2</a> +
           <a href="posters_feb6.html#BC-D3-R1">BC-D3-R1</a> +
-          <a href="posters_feb6.html#BC-D3-R2">BC-D3-R2</a> +
-          <a href="posters_feb6.html#IAAI-D3">IAAI-D3</a> +
-          <a href="posters_feb6.html#SA-D3">SA-D3</a> +
+          <a href="posters_feb6.html#BC-D3-R2">BC-D3-R2</a> ,
+          <a href="posters_feb6.html#IAAI-D3">IAAI-D3</a> ,
+          <a href="posters_feb6.html#SA-D3">SA-D3</a> ,
           <a href="posters_feb6.html#DEMO-D3">DEMO-D3</a>
       </td>
     </tr>
@@ -132,9 +132,9 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb6.html#AC-D3-R1">AC-D3-R1</a> +
           <a href="posters_feb6.html#AC-D3-R2">AC-D3-R2</a> +
           <a href="posters_feb6.html#BC-D3-R1">BC-D3-R1</a> +
-          <a href="posters_feb6.html#BC-D3-R2">BC-D3-R2</a> +
-          <a href="posters_feb6.html#IAAI-D3">IAAI-D3</a> +
-          <a href="posters_feb6.html#SA-D3">SA-D3</a> +
+          <a href="posters_feb6.html#BC-D3-R2">BC-D3-R2</a> ,
+          <a href="posters_feb6.html#IAAI-D3">IAAI-D3</a> ,
+          <a href="posters_feb6.html#SA-D3">SA-D3</a> ,
           <a href="posters_feb6.html#DEMO-D3">DEMO-D3</a>
       </td>
     </tr>
@@ -144,9 +144,9 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb6.html#AB-D3-R1">AB-D3-R1</a> +
           <a href="posters_feb6.html#AB-D3-R2">AB-D3-R2</a> +
           <a href="posters_feb6.html#AC-D3-R1">AC-D3-R1</a> +
-          <a href="posters_feb6.html#AC-D3-R2">AC-D3-R2</a> +
-          <a href="posters_feb6.html#IAAI-D3">IAAI-D3</a> +
-          <a href="posters_feb6.html#SA-D3">SA-D3</a> +
+          <a href="posters_feb6.html#AC-D3-R2">AC-D3-R2</a> ,
+          <a href="posters_feb6.html#IAAI-D3">IAAI-D3</a> ,
+          <a href="posters_feb6.html#SA-D3">SA-D3</a> ,
           <a href="posters_feb6.html#DEMO-D3">DEMO-D3</a>
       </td>
     </tr>
@@ -156,8 +156,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb7.html#AB-D4-R1">AB-D4-R1</a> +
           <a href="posters_feb7.html#AB-D4-R2">AB-D4-R2</a> +
           <a href="posters_feb7.html#BC-D4-R1">BC-D4-R1</a> +
-          <a href="posters_feb7.html#BC-D4-R2">BC-D4-R2</a> +
-          <a href="posters_feb7.html#SA-D4">SA-D4</a> +
+          <a href="posters_feb7.html#BC-D4-R2">BC-D4-R2</a> ,
+          <a href="posters_feb7.html#SA-D4">SA-D4</a> ,
           <a href="posters_feb7.html#DEMO-D4">DEMO-D4</a>
       </td>
     </tr>
@@ -167,8 +167,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb7.html#AC-D4-R1">AC-D4-R1</a> +
           <a href="posters_feb7.html#AC-D4-R2">AC-D4-R2</a> +
           <a href="posters_feb7.html#BC-D4-R1">BC-D4-R1</a> +
-          <a href="posters_feb7.html#BC-D4-R2">BC-D4-R2</a> +
-          <a href="posters_feb7.html#SA-D4">SA-D4</a> +
+          <a href="posters_feb7.html#BC-D4-R2">BC-D4-R2</a> ,
+          <a href="posters_feb7.html#SA-D4">SA-D4</a> ,
           <a href="posters_feb7.html#DEMO-D4">DEMO-D4</a>
       </td>
     </tr>
@@ -178,8 +178,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td><a href="posters_feb7.html#AB-D4-R1">AB-D4-R1</a> +
           <a href="posters_feb7.html#AB-D4-R2">AB-D4-R2</a> +
           <a href="posters_feb7.html#AC-D4-R1">AC-D4-R1</a> +
-          <a href="posters_feb7.html#AC-D4-R2">AC-D4-R2</a> +
-          <a href="posters_feb7.html#SA-D4">SA-D4</a> +
+          <a href="posters_feb7.html#AC-D4-R2">AC-D4-R2</a> ,
+          <a href="posters_feb7.html#SA-D4">SA-D4</a> ,
           <a href="posters_feb7.html#DEMO-D4">DEMO-D4</a>
       </td>
     </tr>
