--- a/templates/posters.html
+++ b/templates/posters.html
@@ -32,46 +32,46 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       <td>4-Feb</td>
       <td>08:45AM-10:30AM</td>
       <td>
-          <a href="posters_feb4.html#AB-D1-R1">AB-D1-R1</a> +
-          <a href="posters_feb4.html#AB-D1-R2">AB-D1-R2</a> +
-          <a href="posters_feb4.html#BC-D1-R1">BC-D1-R1</a> +
-          <a href="posters_feb4.html#BC-D1-R2">BC-D1-R2</a> ,
-          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> ,
-          <a href="posters_feb4.html#UC-D1">UC-D1</a> ,
-          <a href="posters_feb4.html#SA-D1">SA-D1</a> ,
-          <a href="posters_feb4.html#DC-D1">DC-D1</a> ,
-          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> ,
-          <a href="posters_feb4.html#Award-D1">Award-D1</a>
+          <a href="posters.html#AB-D1-R1">AB-D1-R1</a> +
+          <a href="posters.html#AB-D1-R2">AB-D1-R2</a> +
+          <a href="posters.html#BC-D1-R1">BC-D1-R1</a> +
+          <a href="posters.html#BC-D1-R2">BC-D1-R2</a> ,
+          <a href="posters.html#IAAI-D1">IAAI-D1</a> ,
+          <a href="posters.html#UC-D1">UC-D1</a> ,
+          <a href="posters.html#SA-D1">SA-D1</a> ,
+          <a href="posters.html#DC-D1">DC-D1</a> ,
+          <a href="posters.html#DEMO-D1">DEMO-D1</a> ,
+          <a href="posters.html#Award-D1">Award-D1</a>
       </td>
     </tr>
     <tr>
       <td>4-Feb</td>
       <td>04:45PM-06:30PM</td>
-      <td><a href="posters_feb4.html#AC-D1-R1">AC-D1-R1</a> +
-          <a href="posters_feb4.html#AC-D1-R2">AC-D1-R2</a> +
-          <a href="posters_feb4.html#BC-D1-R1">BC-D1-R1</a> +
-          <a href="posters_feb4.html#BC-D1-R2">BC-D1-R2</a> ,
-          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> ,
-          <a href="posters_feb4.html#UC-D1">UC-D1</a> ,
-          <a href="posters_feb4.html#SA-D1">SA-D1</a> ,
-          <a href="posters_feb4.html#DC-D1">DC-D1</a> ,
-          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> ,
-          <a href="posters_feb4.html#Award-D1">Award-D1</a>
+      <td><a href="posters.html#AC-D1-R1">AC-D1-R1</a> +
+          <a href="posters.html#AC-D1-R2">AC-D1-R2</a> +
+          <a href="posters.html#BC-D1-R1">BC-D1-R1</a> +
+          <a href="posters.html#BC-D1-R2">BC-D1-R2</a> ,
+          <a href="posters.html#IAAI-D1">IAAI-D1</a> ,
+          <a href="posters.html#UC-D1">UC-D1</a> ,
+          <a href="posters.html#SA-D1">SA-D1</a> ,
+          <a href="posters.html#DC-D1">DC-D1</a> ,
+          <a href="posters.html#DEMO-D1">DEMO-D1</a> ,
+          <a href="posters.html#Award-D1">Award-D1</a>
       </td>
     </tr>
     <tr>
       <td>5-Feb</td>
       <td>12:45AM-02:30AM</td>
-      <td><a href="posters_feb4.html#AB-D1-R1">AB-D1-R1</a> +
-          <a href="posters_feb4.html#AB-D1-R2">AB-D1-R2</a> +
-          <a href="posters_feb4.html#AC-D1-R1">AC-D1-R1</a> +
-          <a href="posters_feb4.html#AC-D1-R2">AC-D1-R2</a> ,
-          <a href="posters_feb4.html#IAAI-D1">IAAI-D1</a> ,
-          <a href="posters_feb4.html#UC-D1">UC-D1</a> ,
-          <a href="posters_feb4.html#SA-D1">SA-D1</a> ,
-          <a href="posters_feb4.html#DC-D1">DC-D1</a> ,
-          <a href="posters_feb4.html#DEMO-D1">DEMO-D1</a> ,
-          <a href="posters_feb4.html#Award-D1">Award-D1</a>
+      <td><a href="posters.html#AB-D1-R1">AB-D1-R1</a> +
+          <a href="posters.html#AB-D1-R2">AB-D1-R2</a> +
+          <a href="posters.html#AC-D1-R1">AC-D1-R1</a> +
+          <a href="posters.html#AC-D1-R2">AC-D1-R2</a> ,
+          <a href="posters.html#IAAI-D1">IAAI-D1</a> ,
+          <a href="posters.html#UC-D1">UC-D1</a> ,
+          <a href="posters.html#SA-D1">SA-D1</a> ,
+          <a href="posters.html#DC-D1">DC-D1</a> ,
+          <a href="posters.html#DEMO-D1">DEMO-D1</a> ,
+          <a href="posters.html#Award-D1">Award-D1</a>
       </td>
     </tr>
     <tr>
